NEXT
	2015-04-27
	Use 'next-hop' instead of 'interface' in isis_topology
	Replaced config parameter 'community' with 'communities'
	Store all IPv6 addresses in lowercase (as recommended by RFC 5952)
	Added support for Huawei NE-routers
	Added support for diff between hosts (and runs)
	Renamed database upgrade script to "upgrade_netaudit_db" and moved it into bin/ (to be more easily accessible)

3.2 --	2014-04-09
	* netaudit:
	- Added 'timeout' parameter
	- Removed snmp cleanup after snmp failure

3.1.1 -- 2013-02-21
	* netreport --diff:
	- Fixed searching for a partial specified hostname
	- Fixed error output when run is not found in
	- Added error output if there is no last two runs for a hostname
	* netreport --full:
	- Added partital hostname heuretics from --diff
	* netreport --list:
	- Fixed problem when no argument to --list is given

3.1 -- 2013-02-17
	- '--diff' mode is default in netreport. If no hostname is given
	  on command-line run diff over the hosts in both last 2 runs. If
	  a hostname IS given, run diff over last 2 runs with data for the
	  hostname.

3.0.3 -- 2013-02-09
	- Fixed problem logging an undefined sysDescr

3.0.2 -- 2013-01-08
	- Fixed Prompt-problem on ASR9k
	- Fixed error message output on failed login
	- Added debug logging of sysDescr and Plugin used

3.0.1 -- 2013-01-08
	- Updated Changelog
	- Updated info on new netaudit.conf parameters (logging)

3.0 -- 2013-01-08
	- Moved away from Mouse to Mojo
	- The SQL schema is now included in the database module (DATA section)
	- Added logging to file
	- Fixed 'netaudit --diff hostname'

2.2 -- 2012-12-03
	* lib/Netaudit/Constants:
	- Added Pronea style of hostnames

2.1 -- 2012-09-20
	* bin/netaudit:
	- Moved config file code to new module Netaudit::Config
	
	* lib/Netaudit/Config:
	- The config file is now searched for in several places

	* bin/netreport:
	- Common config file with bin/netaudit
	- Changed command arguments:
	    - database is removed
	    - compare|c is renamed to diff|d