@@ -1,11 +1,13 @@
 NEXT
-	2015-04-27
+	2015-05-22
 	Use 'next-hop' instead of 'interface' in isis_topology
 	Replaced config parameter 'community' with 'communities'
 	Store all IPv6 addresses in lowercase (as recommended by RFC 5952)
 	Added support for Huawei NE-routers
 	Added support for diff between hosts (and runs)
 	Renamed database upgrade script to "upgrade_netaudit_db" and moved it into bin/ (to be more easily accessible)
+	Accept more input formats in ip2dot
+	Added some basic unit tests
 
 3.2 --	2014-04-09
 	* netaudit:
